// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Проверяем Button при помощи снэпшотов корректную отрисовку заблокированной кнопки 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  data-testid="button-test"
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Проверяем Button при помощи снэпшотов корректную отрисовку кнопки без текста 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  data-testid="button-test"
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Проверяем Button при помощи снэпшотов корректную отрисовку кнопки с индикацией загрузки 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  data-testid="button-test"
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Проверяем Button при помощи снэпшотов корректную отрисовку кнопки с текстом 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  data-testid="button-test"
  type="button"
>
  <p
    className="text undefined"
  >
    text
  </p>
</button>
`;
